# siti-tools

./: .gitignore  CHANGELOG.md  DEVELOPERS.md  LICENSE  README.md  cliff.toml  pyproject.toml  release.sh  requirements.dev.txt  requirements.txt  setup.py
.github/workflows/: python-package.yml
docs/: index.html  search.js  search.json  siti_tools.html
docs/siti_tools/: __main__.html  file.html  log.html  siti.html
siti_tools/: __main__.py  file.py  log.py  siti.py
src/siti_tools/: __init__.py  __main__.py  file.py  siti.py
test/: generate_ffmpeg_sources.sh  generate_ground_truth_aom.sh  generate_raw_siti_values.py  generate_values.py  profile.sh  test.csv  test.py  test_decode.py
test/ground_truth/: FourPeople_480x270_60.json  ParkJoy_480x270_50.json  SparksElevator_480x270p_5994_10bit.json  SparksTruck_2048x1080_5994_hdr10.json  black.json  checkerboard-1x1.json  checkerboard-8x8-10bpp-limited.json  checkerboard-8x8-10bpp.json  checkerboard-8x8.json  checkerboard.json  fall-hlg.json  foreman_cif-legacy.json  foreman_cif.csv  foreman_cif.json  full-range-legacy.json  full-range.json  lights-hlg.json  limited-range-legacy.json  limited-range.json  noise.json  sunset-hlg.json  test-1080p.json  test-240p.json  test-360p.json  test-480p.json  test-720p.json  test.csv  white.json
test/profile/: run_profile.py
test/videos/: .gitignore  LICENSES  fall-hlg.mov  foreman_cif.y4m  lights-hlg.mov  noise.y4m  sunset-hlg.mov
test/videos_yuv/: raw.y4m  raw.yuv
utils/: json-to-csv.py
