[tool.poetry]
name = "siti-tools"
version = "0.2.2"
description = ""
authors = ["Werner Robitza <werner.robitza@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1,<3.12"
numpy = "~1.23.5"
scipy = "~1.10.1"
av = "~10.0.0"
tqdm = "~4.65.2"
plotille = "~5.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
flake8 = "^4.0.1"
black = "^23.12.0"
requests = "^2.31.0"
pytest-xdist = "^2.5.0"

[tool.poetry.scripts]
siti-tools = 'siti_tools.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
