[tool.poetry]
name = "siti-tools"
version = "0.3.0"
description = ""
authors = ["Werner Robitza <werner.robitza@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10.1,<3.14"
numpy = "~2.2.0"
scipy = "^1.11.0,<1.17"
av = "~14.4.0"
tqdm = "~4.66.0"
plotille = "~5.0.0"

[tool.poetry.scripts]
siti-tools = 'siti_tools.__main__:main'

[tool.poetry.group.dev.dependencies]
pypandoc = "^1.14"
gitchangelog = "^3.0.4"
pdoc = "^14.7.0"
twine = "^5.1.0"
wheel = "^0.45.0"
pytest = "^8.3.0"
flake8 = "^7.1.0"
black = "^24.10.0"
requests = "^2.32.0"
pytest-xdist = "^3.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
