[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[project]
name = "siti-tools"
version = "0.3.0"
description = "Functions to calculate Spatial Information / Temporal Information according to ITU-T P.910"
readme = "README.md"
authors = [
    { name = "Werner Robitza", email = "werner.robitza@gmail.com" },
    { name = "Lukas Krasula" },
    { name = "Cosmin Stejerean" }
]
license = "MIT"
requires-python = ">=3.10.1"
dependencies = [
    "scipy>=1.11.0,<1.17",
    "numpy~=2.2.0",
    "av~=14.4.0",
    "tqdm~=4.66.0",
    "plotille~=5.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Video",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["video", "spatial information", "temporal information"]

[project.urls]
Homepage = "https://github.com/VQEG/siti-tools"
Repository = "https://github.com/VQEG/siti-tools"

[project.scripts]
siti-tools = "siti_tools.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9",
    "ruff~=0.9.0",
    "pdoc~=14.0.0",
    "requests~=2.32.0",
    "pytest-xdist>=3.6.0",
]
